# pg-faker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  run-tests.yml  test-reusable.yml
src/pg_faker/: __init__.py  gen.py  generate.py  map.py  pg.py  strategies.py  text_col_map.py
src/pg_faker/tests/: conftest.py  test_configurable_mappings.py  test_generate.py  test_run.py
src/pg_faker/tests/schemas/: all_nullable.sql  array.sql  circular_fk.sql  complicated.sql  composite_pk.sql  enum.sql  fk.sql  keyword.sql  multi_fk.sql  range.sql  readme.sql
