[project]
name = "pg-faker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neil Holloway", email = "neil_holloway@hotmail.co.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.2",
    "psycopg[binary]>=3.2.9",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
