[project]
name = "pg-faker"
version = "0.1.0"
description = "Faker powered PostgreSQL data generation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Neil Holloway", email = "neil_holloway@hotmail.co.uk" }
]
requires-python = ">=3.12"
license-files = ['LICENSE']
dependencies = [
    "faker>=37.4.2",
    "psycopg[binary]>=3.2.9",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
