[project]
name = "pgsql-faker"
version = "0.1.0"
description = "Faker powered PostgreSQL data generation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Neil Holloway", email = "neil_holloway@hotmail.co.uk" }
]
requires-python = ">=3.12"
license-files = ['LICENSE']
dependencies = [
    "faker>=37.4.2",
    "psycopg[binary]>=3.2.9",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "pyright>=1.1.390",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
